# test-bare-metal-pico-rs

./: Cargo.toml  README.md
src/: main.rs
