[package]
name = "test-bare-metal-pico-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rp235x-hal = { version = "0.4.0", features = ["rt", "critical-section-impl"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
